# smart_car_slam_training

./: .gitignore  README.md  build_app.ps1  gradle.properties  install_app.ps1  settings.gradle.kts
app/: build.gradle.kts
contracts/: jarvis-api-v1.json
docs/: jarvis-demo-runbook.md  vision-incident-reporting-design.md
jarvis_agent/: .env.example  pyproject.toml
jarvis_agent/deploy/: icar-control.service  jarvis-agent.service
jarvis_agent/src/jarvis_agent/: __init__.py  api.py  config.py  control_client.py  deepseek.py  event_adapter.py  mission_engine.py  models.py  reporting.py  repository.py  simulator.py  validator.py  vision_context.py
jarvis_agent/tests/: test_api.py  test_config.py  test_control_client.py  test_deepseek.py  test_end_to_end.py  test_events_and_reports.py  test_mission_engine.py  test_repository.py  test_validator.py  test_vision_context.py
jarvis_agent/tests/fixtures/: mission.json  vision_event.json
jetson_perception/: README.md  __init__.py  arrow_classifier.py  arrow_turn_demo.py  class_map.py  event_mapper.py  icar-vision.service  incident_engine.py  jarvis_client.py  main.py  mock_detector.py  models.py  opencv_yolo_backend.py  pipeline.py  temporal_filter.py  test_arrow_classifier.py  test_arrow_turn_demo.py  test_opencv_yolo_backend.py  test_perception.py  test_tracker.py  test_vision_service.py  tracker.py  vision_service.py
jetson_server/: README.md  camera_stream.py  icar-control.service  motion_bridge.py  navigation_bridge.py  patch_nav_goal_checkers.py  server.py  speech_queue.py  test_camera_stream.py  (+5 more)
(+172 files in other folders)
